Fix images alignment

--- a/components/Message/MessageItem.module.scss
+++ b/components/Message/MessageItem.module.scss
@@ -8,6 +8,9 @@
     max-width: 75%;
 
     .senderPictureContainer {
+      display: flex;
+      justify-content: center;
+      align-items: center;
       min-width: 32px;
       align-self: flex-end;
       width: 32px;
