--- a/components/Message/MessageOwner.module.scss
+++ b/components/Message/MessageOwner.module.scss
@@ -10,6 +10,9 @@
     flex-direction: row-reverse;
 
     .senderPictureContainer {
+      display: flex;
+      justify-content: center;
+      align-items: center;
       min-width: 32px;
       align-self: flex-end;
       width: 32px;
