--- a/components/Settings/SettingsHero.module.scss
+++ b/components/Settings/SettingsHero.module.scss
@@ -21,6 +21,9 @@
       justify-content: center;
       align-items: center;
       .imageBackground {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         position: relative;
         border-radius: 40px;
         width: 80px;
